# codeGuardian

./: .cgignore  .gitignore  AI_GRAND_CHALLENGE_ANALYSIS.md  CHECKPOINT_BUG_FIX.md  COMPETITION_READY_GUIDE.md  CORRECTED_TESTING_ANALYSIS.md  CSV_FIX_SUMMARY.md  DATASET_VERIFICATION_REPORT.md  DATA_LEAKAGE_ANALYSIS.md  DIAGNOSTIC_GUIDE.md  DIVERSEVUL_VERIFICATION.md  ENHANCED_LORA_TRAINING_GUIDE.md  FINAL_SUCCESS_REPORT.md  FIX_SUMMARY.md  GIT_TRACKING_GUIDE.md  IMMEDIATE_FIX.py  INSTALLATION.md  INSTALLATION_SUMMARY.md  JULIET_COMMANDS.md  JULIET_DATASET_DEEP_ANALYSIS.md  JULIET_DATASET_UNDERSTANDING.md  JULIET_FINAL_FIX_SUMMARY.md  JULIET_FINAL_SUMMARY.md  JULIET_TEST_COMMANDS.md  JULIET_ULTRA_FAST_FIXES.md  JULIET_ULTRA_FAST_GUIDE.md  KAGGLE_COMMANDS.md  KAGGLE_DATASET_STRUCTURE.md  KAGGLE_DEPLOYMENT_GUIDE.md  KAGGLE_DIAGNOSTIC_REPORT.md  KAGGLE_ERROR_256_FIX.md  KAGGLE_FIX_STEPS.md  KAGGLE_PREPROCESSING_FIX.md  KAGGLE_REFACTORING_SUMMARY.md  KAGGLE_SETUP.md  PHASE2_COMPLETION_CHECKLIST.md  PHASE2_ENHANCEMENTS_SUMMARY.md  PHASE2_PRODUCTION_GUIDE.md  PHASE_3.2_SUMMARY.md  PREPROCESSING_FIXES.md  (+25 more)
balanced_test_files/: safe_001.c  safe_003.c  safe_005.c  safe_006.c  safe_007.c  safe_009.c  safe_010.c  vuln_002.c  vuln_003.c  vuln_004.c  vuln_005.c  vuln_009.c  vuln_010.c
cache/: test_features.csv  test_stats.json
configs/: feature_config.py  pipeline_config.yaml
deployment/: Dockerfile  README.md  docker-compose.yml  init-db.sql  nginx.conf  prometheus.yml
docs/: 0. ARCHITECTURE_DIAGRAM.md  3. ML_COMPLETE_SUMMARY.md  4. INFERENCE_GUIDE.md  QUICKSTART.md  (+4 more)
(+259 files in other folders)
